--- a/angular/example-mvc.html
+++ b/angular/example-mvc.html
@@ -1,17 +1,61 @@
-﻿<!doctype html>
-<html ng-app>
+﻿<!-- define o namespace da aplicação -->
+<html ng-app="mvcApp">
   <head>
-  	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <script src="bower_components/angular/angular.min.js"></script>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+
+    <title>Tutorial AngularJS - episódio 3 - MVC</title>
   </head>
-  <body>
-  	<div class="container">
-  		<div class="row">
-  			<div class="col-xs-vou 12">
-    			<h1>Estados e capitais</h1>
-  				
-  			</div>
-  		</div>
-  	</div>
+
+  <!-- define um controller para este trecho da tela -->
+  <body ng-controller="ep03Controller">
+
+  <div class="container theme-showcase">
+    <h1>Estados e capitais</h1>
+    <ul class="list-group">
+      <!-- diretiva ng-repeat -->
+      <li class="list-group-item" ng-repeat="state in states">{{state.name}} - {{state.capital}}</li>
+    </ul>
+
+    <!-- atribui método para submit -->
+    <form ng-submit="addState()">
+      <input type="text" ng-model="estado" placeholder="Digite um estado" />
+      <input type="text" ng-model="capital" placeholder="Digite a capital" />
+      <input type="submit" value="Incluir" />
+    </form>
+
+    <!-- aqui vai o controller (poderia estar em um arquivo a parte) -->
+    <script>
+      <!-- carrega o módulo -->
+      var mvcApp = angular.module('mvcApp', []);
+
+      mvcApp.controller('ep03Controller', function ep03Controller($scope) {
+        
+        $scope.states = [
+          {name:'Minas Gerais', capital: 'Belo Horizonte'},
+          {name:'São Paulo', capital: 'São Paulo'},
+          {name:'Paraíba', capital: 'João Pessoa'},
+          {name:'Rio de Janeiro', capital: 'Rio de Janeiro'}
+        ];
+
+        $scope.addState = function() {
+          $scope.states.push({name : $scope.estado, capital : $scope.capital});
+          $scope.estado = '';
+          $scope.capital = '';
+        }
+      });
+    </script>
+
+
+  </div>
   </body>
 </html>
