--- a/angular/example-filter.html
+++ b/angular/example-filter.html
@@ -18,7 +18,7 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
-  <!--<script src="bower_components/angular-i18n/angular-locale_pt-br.js"></script>-->
+  <script src="bower_components/angular-i18n/angular-locale_pt-br.js"></script>
 
   <title>Tutorial AngularJS - episódio 6 - Filtros</title>
 </head> 
@@ -31,14 +31,14 @@
   <div class="container theme-showcase">
     <h1>Estados e capitais</h1>
     
-    <p>Data: {{data | date:'dd/MM/yyyy'}}</p>
+    <p>Data: {{data | date:'dd/MMM/yyyy'}}</p>
     
     <p>Filtrar: <input type="text" ng-model="filtro" /></p>
 
     <ul class="list-group">
       <!-- diretiva ng-repeat -->
       <li class="list-group-item" ng-repeat="state in states | orderBy:'name' | filter:filtro">
-      {{state.name | uppercase}} - {{state.capital | lowercase}} - renda per capita: {{state.renda | currency:'R$'}}
+      {{state.name | uppercase}} - {{state.capital | lowercase}} - renda per capita: {{state.renda | currency}}
       </li>
     </ul>
 
